--- a/packages/alarm/alarm_control_panel/general_alarm.yaml
+++ b/packages/alarm/alarm_control_panel/general_alarm.yaml
@@ -211,7 +211,7 @@ template:
           {# STATO ALLARME #}
           {% elif trigger is defined and trigger.entity_id == 'sensor.stato_allarme' %}
             {% set persons = states.person | selectattr('attributes.user_id', 'eq', trigger.to_state.context.user_id) | list %} 
-            {% set parents = states.automation | selectattr('context.parent_id', 'eq', trigger.to_state.context.parent_id) | list %} 
+            {% set parents = expand(states.automation, states.button) | selectattr('context.parent_id', 'eq', trigger.to_state.context.parent_id) | list %} 
                 {% if persons | count == 1 and (trigger.to_state.state == 'In Attivazione' or trigger.to_state.state ==  'Disattivato') %}
                     {{ as_local(now()).strftime("%d/%m %H:%M -> ") + trigger.to_state.state + ' da: ' + persons[0].attributes.friendly_name }}           
                 {% elif parents | count > 0 and (trigger.to_state.state == 'In Attivazione' or trigger.to_state.state ==  'Disattivato') %}
