--- a/packages/alarm/skill_device/siren.yaml
+++ b/packages/alarm/skill_device/siren.yaml
@@ -1,9 +1,10 @@
+# 02-06-23
 homeassistant:
   customize:
     package.node_anchors:
-      Campanello: &siren
-        - switch.sirena_esterna
-        - switch.sirena_interna
+        Sirena1: &siren1 switch.sirena
+        Sirena2: &siren2 switch.sirena_zigbee
+
 
 ##############################################################
 #         DA QUESTO PUNTO NON MODIFICARE
@@ -15,54 +16,71 @@ automation:
     variables:
       alarm: >
         {% from 'alarm.jinja' import state_alarm %}
-        {{ (state_alarm()|from_json)['alarm'] }}
+        {{ (state_alarm()|from_json)['alarm']}}
     trigger:
       - platform: template
-        value_template: >-
+        value_template: >
           {% from 'alarm.jinja' import state_alarm %}
-          {% set alarm = (state_alarm()|from_json)['alarm'] %}
-          {{ is_state(alarm, 'pending')  and now() < states[alarm].last_changed + timedelta(seconds=1) }}
+          {%set alarm = (state_alarm()|from_json)['alarm'] %}
+          {{ is_state(alarm,'pending')  and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
       - platform: template
-        value_template: >-
+        value_template: >
           {% from 'alarm.jinja' import state_alarm %}
-          {% set alarm = (state_alarm()|from_json)['alarm'] %}
-          {{ is_state(alarm, 'triggered')  and now() < states[alarm].last_changed + timedelta(seconds=1) }}
+          {%set alarm = (state_alarm()|from_json)['alarm'] %}
+          {{ is_state(alarm,'triggered')  and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
       - platform: template
-        value_template: >-
+        value_template: >
           {% from 'alarm.jinja' import state_alarm %}
-          {% set alarm = (state_alarm()|from_json)['alarm'] %}
-          {{ is_state(alarm, 'disarmed')  and now() < states[alarm].last_changed + timedelta(seconds=1) }}
+          {%set alarm = (state_alarm()|from_json)['alarm'] %}
+          {{ is_state(alarm,'disarmed')  and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
     action:
-      - choose:
-          - alias: Primo avviso sensore scattato
-            conditions:
-              - "{{ trigger.to_state.state == 'pending' }}"
-            sequence:
-              - service: switch.turn_on
-                target:
-                  entity_id: *siren
-              - delay:
-                  milliseconds: 100
-              - service: switch.turn_off
-                target:
-                  entity_id: *siren
-          - alias: Allarme scattato
-            conditions:
-              - "{{ trigger.to_state.state == 'triggered' }}"
-            sequence:
-              - repeat:
-                  until:
-                    - condition: template
-                      value_template: "{{ is_state(alarm , 'triggered') }}"
-                  sequence:
-                    - service: switch.turn_on
-                      target:
-                        entity_id: *siren
-          - alias: Allarme disattivato
-            conditions:
-              - "{{ trigger.to_state.state == 'disarmed' }}"
-            sequence:
-              - alias: Spegni sirena
-                service: switch.turn_off
-                target:
-                  entity_id: *siren
+    - choose:
+        - alias: Primo avviso sensore scattato
+          conditions:
+            - "{{trigger.to_state.state == 'pending'}}"
+          sequence:
+          - service: switch.turn_on
+            target:
+              entity_id: *siren1
+          - delay:
+              milliseconds: 700
+
+          - service: switch.turn_off
+            target:
+              entity_id: *siren1
+
+        - alias: Allarme scattato
+          conditions:
+            - "{{trigger.to_state.state == 'triggered'}}"
+          sequence:
+            - repeat:
+                until:
+                  - condition: template
+                    value_template: "{{is_state(alarm , 'triggered')}}"
+                sequence:
+                  - service: switch.turn_on
+                    target:
+                      entity_id: *siren1
+                  - service: switch.turn_on
+                    target:
+                      entity_id: *siren2
+            - service: switch.turn_off
+              target:
+                entity_id: *siren1
+            - service: switch.turn_off
+              target:
+                entity_id: *siren2
+        - alias: Allarme disattivato
+          conditions:
+            - "{{trigger.to_state.state == 'disarmed'}}"
+          sequence:
+          - alias: Spegni sirena
+            service: switch.turn_off
+            target:
+              entity_id: *siren1
+          - alias: Spegni sirena
+            service: switch.turn_off
+            target:
+              entity_id: *siren2
+
+
