--- a/packages/alarm/alarm_control_panel/general_alarm.yaml
+++ b/packages/alarm/alarm_control_panel/general_alarm.yaml
@@ -206,17 +206,17 @@ template:
       - name: History alarm
         state: >-
           {# SENSORE SCATTATO #}
-          {% if trigger.event is defined and (trigger.event.data.notify == 'allarme_notte_sensore_rilevato' or trigger.event.data.notify == 'allarme_globale_sensore_rilevato' or trigger.event.data.notify == 'presence_simulation_mobile' ) %}
-              {{ as_local(now()).strftime("%d/%m %H:%M -> ") + trigger.event.data.message |replace('Attenzione allarme in attivaziona da','') }}
+          {% if trigger.event is defined and trigger.event.data.notify in ['allarme_notte_sensore_rilevato', 'allarme_globale_sensore_rilevato', 'presence_simulation_mobile'] %}
+              {{ as_local(now()).strftime("%d/%m %H:%M -> ") + trigger.event.data.message | replace('Attenzione allarme in attivazione da', '') }}
           {# STATO ALLARME #}
           {% elif trigger is defined and trigger.entity_id == 'sensor.stato_allarme' %}
             {% set persons = states.person | selectattr('attributes.user_id', 'eq', trigger.to_state.context.user_id) | list %} 
             {% set parents = expand(states.automation, states.button) | selectattr('context.parent_id', 'eq', trigger.to_state.context.parent_id) | list %} 
-                {% if persons | count == 1 and (trigger.to_state.state == 'In Attivazione' or trigger.to_state.state ==  'Disattivato') %}
+                {% if persons | count == 1 and trigger.to_state.state in ['In Attivazione', 'Disattivato'] %}
                     {{ as_local(now()).strftime("%d/%m %H:%M -> ") + trigger.to_state.state + ' da: ' + persons[0].attributes.friendly_name }}           
-                {% elif parents | count > 0 and (trigger.to_state.state == 'In Attivazione' or trigger.to_state.state ==  'Disattivato') %}
-                    {% for parents in parents if "Allarme: " in parents.attributes.friendly_name %}
-                        {{ as_local(now()).strftime("%d/%m %H:%M -> ") + trigger.to_state.state + ' da: ' + parents.attributes.friendly_name | replace('Allarme: ','')}}
+                {% elif parents | count > 0 and trigger.to_state.state in ['In Attivazione', 'Disattivato'] %}
+                    {% for parent in parents if "Allarme: " in parent.attributes.friendly_name %}
+                        {{ as_local(now()).strftime("%d/%m %H:%M -> ") + trigger.to_state.state + ' da: ' + parent.attributes.friendly_name | replace('Allarme: ','')}}
                     {% break %} 
                     {% endfor %}
                 {% else %}
@@ -224,11 +224,11 @@ template:
                 {% endif %}
           {# CONTROLLO TENTATIVI CODICE #}
           {% elif trigger.id == 'control_code' %}
-            {% set code_card = 'sensor.counter_code_error'%}
+            {% set code_card = 'sensor.counter_code_error' %}
             {% set code_keypad = 'sensor.counter_code_error_keypad' %}
-                {% if states(code_card) != 'unknown' and not is_state(code_card,'0') %}
+                {% if states(code_card) != 'unknown' and not is_state(code_card, '0') %}
                   {{ as_local(now()).strftime("%d/%m %H:%M -> ") + 'Tentativo n.' + states(code_card) + ' codice errato' }}
-                {% elif states(code_keypad) != 'unknown' and not is_state(code_keypad,'0') %}
+                {% elif states(code_keypad) != 'unknown' and not is_state(code_keypad, '0') %}
                   {{ as_local(now()).strftime("%d/%m %H:%M -> ") + 'Tentativo n.' + states(code_keypad) + ' codice keypad errato' }}
                 {% else %}
                 Errore codice
@@ -261,8 +261,13 @@ automation:
       - platform: template
         value_template: >-
           {% from 'alarm.jinja' import state_alarm %}
-          {% set alarm_state = states[(state_alarm() | from_json)['alarm']] %}
-          {{ (alarm_state.state in ['triggered', 'disarmed']) and (now() < alarm_state.last_changed + timedelta(seconds=1)) }}
+          {% set alarm = (state_alarm() | from_json) ['alarm'] %}
+          {{ is_state(alarm, 'disarmed') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
+      - platform: template
+        value_template: >-
+          {% from 'alarm.jinja' import state_alarm %}
+          {% set alarm = (state_alarm() | from_json) ['alarm'] %}
+          {{ is_state(alarm, 'triggered') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
     action:
       - if: "{{ trigger.to_state.state == 'triggered' }}"
         then:
