--- a/packages/alarm/skill_device/notify_alarm/notify_media_player.yaml
+++ b/packages/alarm/skill_device/notify_alarm/notify_media_player.yaml
@@ -6,7 +6,7 @@ homeassistant:
 automation:
   - alias: "Allarme: notify alarm media player"
     id: allarme_notify_alarm_media_player
-    mode: restart
+    mode: parallel
     variables:
       my_external_domain: *my_external_domain
       volume: 0.5
