unito volume alexa e google

--- a/packages/alarm/skill_device/notify_alarm/notify_media_player.yaml
+++ b/packages/alarm/skill_device/notify_alarm/notify_media_player.yaml
@@ -18,8 +18,7 @@ automation:
         {% from 'personal.jinja' import media_players %}
         {% set media = media_players('cast').split() %}
         {{ media}}
-      volume_google: "{{ state_attr('sensor.volumi_google', 'list_device').values() | list }}"
-      volume_alexa: "{{ state_attr('sensor.volumi_alexa', 'list_device').values() | list }}"
+      volume_media_player: "{{ state_attr('sensor.volumi_media_player', 'list_device').values() | list }}"
     trigger:
       - platform: event
         event_type: customizations
@@ -90,32 +89,11 @@ automation:
                       media_content_type: audio/mp3
                     target:
                       entity_id: "{{ trigger.event.data.target_google if trigger.event.data.target_google is defined else google }}"
-                  - delay:
-                      seconds: "360"
-                  - repeat:
-                      for_each: "{{ google }}"
-                      sequence:
-                        - alias: Imposta volume Notifica
-                          service: media_player.volume_set
-                          data:
-                            entity_id: "{{ repeat.item }}"
-                            volume_level: "{{ volume_google[repeat.index - 1] }}"
-
                 else:
                   - service: tts.google_translate_say
                     data:
                       entity_id: "{{ google }}"
                       message: "{{ trigger.event.data.message | default('Messaggio non impostato') }}"
-                  - delay:
-                      seconds: "{{ (5 + (trigger.event.data.message | regex_replace('[a-zA-Z0-9]', '')).split()|count * 0.35 + trigger.event.data.message | count * 0.06) | round(0, default=5) }}"
-                  - repeat:
-                      for_each: "{{ google }}"
-                      sequence:
-                        - alias: Imposta volume Notifica
-                          service: media_player.volume_set
-                          data:
-                            entity_id: "{{ repeat.item }}"
-                            volume_level: "{{ volume_google[repeat.index - 1] }}"
 
           - alias: Invia notifica ad Alexa
             if: >
@@ -130,16 +108,6 @@ automation:
                       data:
                         type: tts
                       target: "{{ trigger.event.data.target_alexa if trigger.event.data.target_alexa is defined else alexa }}"
-                  - delay:
-                      seconds: "360"
-                  - repeat:
-                      for_each: "{{ alexa }}"
-                      sequence:
-                        - alias: Imposta volume Notifica
-                          service: media_player.volume_set
-                          data:
-                            entity_id: "{{ repeat.item }}"
-                            volume_level: "{{ volume_alexa[repeat.index - 1] }}"
 
                 else:
                   - service: notify.alexa_media
@@ -148,13 +116,13 @@ automation:
                       data:
                         method: spoken
                       message: "{{ trigger.event.data.message | default('Messaggio non impostato') }}"
-                  - delay:
-                      seconds: "{{ (5 + (trigger.event.data.message | regex_replace('[a-zA-Z0-9]', '')).split()|count * 0.35 + trigger.event.data.message | count * 0.06) | round(0, default=5) }}"
-                  - repeat:
-                      for_each: "{{ alexa }}"
-                      sequence:
-                        - alias: Imposta volume Notifica
-                          service: media_player.volume_set
-                          data:
-                            entity_id: "{{ repeat.item }}"
-                            volume_level: "{{ volume_alexa[repeat.index - 1] }}"
+      - delay:
+          seconds: "{{ 360 if trigger.event.data.mp3 is defined else (5 + (trigger.event.data.message | regex_replace('[a-zA-Z0-9]', '')).split()|count * 0.35 + trigger.event.data.message | count * 0.06) | round(0, default=5) }}"
+      - repeat:
+          for_each: "{{ alexa + google }}"
+          sequence:
+            - alias: Imposta volume Notifica
+              service: media_player.volume_set
+              data:
+                entity_id: "{{ repeat.item }}"
+                volume_level: "{{ volume_media_player[repeat.index - 1] }}"
