--- a/packages/alarm/alarm_control_panel/armed_night.yaml
+++ b/packages/alarm/alarm_control_panel/armed_night.yaml
@@ -183,6 +183,7 @@ automation:
                 event_data:
                   types: notify_alarm
                   notify: allarme_notte_disattivato
+                  cancella: true
                   tag: state_alarm
                   volume: "{{ 0.7 if is_state('input_boolean.alarm_triggered_state','on') else 0.3 }}"
                   action2: None
@@ -248,6 +249,8 @@ automation:
             event_data:
               types: notify_alarm
               notify: allarme_notte_chiusa_finestra
+              cancella: true
+              tag: state_alarm
               message: "{{ 'Inserita ' + states[trigger.event.data.entity_id].name + ' al controllo sensori allarme notte' }}"
               action1: None
           - event: customizations
