--- a/packages/alarm/alarm_control_panel/armed_zone_night.yaml
+++ b/packages/alarm/alarm_control_panel/armed_zone_night.yaml
@@ -7,7 +7,7 @@ template:
   - select:
       - name: "Aggiungi o rimuovi zone allarme notte"
         state: "{{ '' }}"
-        options: "{{ ['RESET'] + state_attr('sensor.lista_zone_alarm_setting', 'print_list_group') | list }}"
+        options: "{{ ['RESET'] + state_attr('sensor.lista_zone_alarm_setting', 'print_list_group') | reject('in',['None','unknown', 'unavailable']) | list }}"
         select_option:
           - event: customizations
             event_data:
@@ -152,6 +152,7 @@ automation:
                   tag: state_alarm
                   volume: 0.2
                   message: "Allarme notte a zone inserito"
+                  cancella: true
                   action2: None
 
           - alias: Allarme scattato
@@ -199,6 +200,7 @@ automation:
                   volume: "{{ 0.7 if is_state('input_boolean.alarm_triggered_state', 'on') else 0.3 }}"
                   action2: None
                   action1: None
+                  cancella: true
                   message: >-
                     {% if is_state('input_boolean.alarm_triggered_state', 'on') %}
                       {{ 'Attenzione allarme notte scattato in vostra assenza il ' + as_local(states['input_boolean.alarm_triggered_state'].last_changed).strftime("%H:%M") + '. Allarme disattivato.' }}
@@ -260,6 +262,8 @@ automation:
             event_data:
               types: notify_alarm
               notify: allarme_notte_chiusa_finestra
+              cancella: true
+              tag: state_alarm
               message: "{{ 'Inserita ' + states[trigger.event.data.entity_id].name + ' al controllo sensori allarme notte' }}"
               action1: None
           - event: customizations
