--- a/packages/alarm/scene/action_alarm.yaml
+++ b/packages/alarm/scene/action_alarm.yaml
@@ -11,7 +11,7 @@ group:
       #- automation.accensione_automatica_bagnetto
       - automation.accensione_automatica_corridoio
       - automation.accensione_automatica_ripostiglio
-      - automation.luce_cucina
+      #- automation.luce_cucina
       - automation.accensione_automatica_studio
       - automation.accendi_libreria_con_porta_aperta
       - automation.notifica_campanello
@@ -29,7 +29,7 @@ automation:
     mode: parallel
     variables:
       all_light: *all_light
-      exclude: "{{ expand('group.exclude_alarm_entities') | map(attribute='entity_id') | list }}"
+      exclude: "{{ expand('group.exclude_alarm_entities') | map(attribute='entity_id') | list + area_entities('box') }}"
     trigger:
       - platform: template
         value_template: >-
