--- a/packages/alarm/skill_device/detached/general_detached_alarm.yaml
+++ b/packages/alarm/skill_device/detached/general_detached_alarm.yaml
@@ -19,9 +19,9 @@ automation:
           - "{{ trigger.event.event_type == 'shelly.click'}}"
           - and:
               - >
-                {% set exclude = expand('group.exclude_alarm_entities') | map(attribute='entity_id') | list %}
+                {% set exclude = expand('group.exclude_alarm_entities') | map(attribute='entity_id') | list + area_entities('box') %}
                 {%- set last_time = states.binary_sensor | rejectattr('entity_id', 'in',exclude) | selectattr('attributes.device_class', 'defined') | selectattr('attributes.device_class', 'eq', 'power') | map(attribute='last_changed') | max -%}
-                {%- set last_sensor = ((states.binary_sensor | rejectattr('entity_id', 'in',exclude) | selectattr('attributes.device_class', 'defined') | selectattr('last_changed', 'eq', last_time) | list)[0]) -%}
+                {%- set last_sensor = (states.binary_sensor | rejectattr('entity_id', 'in',exclude) | selectattr('attributes.device_class', 'defined') | selectattr('last_changed', 'eq', last_time) | list)[0] -%}
                   {{-trigger.event.data.entity_id == last_sensor.entity_id and trigger.event.event_type == 'state_changed'-}}
               - or:
                   - "{{trigger.event.data.new_state.state == 'on' and trigger.event.data.old_state.state == 'off'}}"
