--- a/packages/alarm/skill_device/jammer_detect.yaml
+++ b/packages/alarm/skill_device/jammer_detect.yaml
@@ -16,7 +16,7 @@ template:
       - name: "Jammer detect entities"
         state: "Disabilitato"
         options: >-
-          {% set exclude = expand('group.exclude_alarm_entities') | map(attribute='entity_id') | list %}
+          {% set exclude = expand('group.exclude_alarm_entities') | map(attribute='entity_id') | list + area_entities('box') %}
           {% set output = namespace(numbers=[]) %}
           {% set domain = states.sensor | rejectattr('entity_id', 'in',exclude) | selectattr('attributes.device_class', 'defined') | selectattr('attributes.device_class', 'eq', 'signal_strength') %}
           {% for states in domain if states.state != 'unavailable' and states.state != 'unknown' %}
@@ -57,7 +57,7 @@ template:
 
   - sensor:
       - name: Jammer detect count entities
-        state: "{{ state_attr('sensor.lista_sensori_jummer', 'print_list_group') | count }}"
+        state: "{{ state_attr('sensor.lista_sensori_jummer', 'print_list_group') | reject('in',['None','unknown', 'unavailable']) | list | count }}"
         unit_of_measurement: "Voti"
 
 automation:
